--- a/SportsStore.csproj
+++ b/SportsStore.csproj
@@ -21,6 +21,8 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
 
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
 
   </ItemGroup>
